[package]
name = "gram-core"
version = "0.3.0"
edition = "2024"

[dependencies]
grammers-client = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.7"
wildcard = "0.3.0"
regex = "1.12.2"
rusttype = "0.9.3"
