[package]
name = "gram-pytools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gram_pytools"
crate-type = ["cdylib"]

[dependencies]
gram-core = { path = "../gram-core" }
anyhow = "1.0.100"
grammers-tl-types = { git = "https://github.com/Lonami/grammers", features = [
    "impl-serde",
] }
serde = { version = "1.0.226", features = ["serde_derive"] }
serde_json = "1.0.145"
pyo3 = "0.26.0"

[patch.crates-io]
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
