[package]
name = "gram-pytools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gram_pytools"
crate-type = ["cdylib"]

[dependencies]
gram-core = { path = "../gram-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pyo3 = "0.26.0"
