[package]
name = "gram-pytools"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gram_pytools"
crate-type = ["cdylib"]

[dependencies]
gram-core = { path = "../gram-core" }
image = "0.25.8"
pyo3 = "0.26.0"
