[package]
name = "gram-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
gram-core.path = "../gram-core"
gram-type.path = "../gram-type"
tokio.workspace = true
serde.workspace = true
sea-orm.workspace = true
tracing = { workspace = true, features = ["attributes"] }
grammers-client = { workspace = true, features = [
    "parse_invite_link",
    "serde",
] }
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros", "ws"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
dashmap = "6.1.0"
bytes = "1.10.1"
axum-streams = { version = "0.23.1", features = ["json"] }
tokio-stream = "0.1.17"
chrono = "0.4.42"
